force-app/main/default/objects/FlowScreenSettings__c/FlowScreenSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Flow screen settings determine text that displays to the user while completing CAP Flows.</description>
    <label>Flow Screen Settings</label>
</CustomObject>