force-app/main/default/objects/FlowScreenSettings__c/fields/AcceptanceFieldLabel_CARA__c.field-meta.xml
<CustomField>
    <fullName>AcceptanceFieldLabel_CARA__c</fullName>
    <defaultValue>$Label.AcceptanceFieldLabel_CARA</defaultValue>
    <label>Acceptance Field Label (CARA)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>