force-app/main/default/objects/FlowScreenSettings__c/fields/AcceptanceFieldLabel_IMGA__c.field-meta.xml
<CustomField>
    <fullName>AcceptanceFieldLabel_IMGA__c</fullName>
    <defaultValue>$Label.AcceptanceFieldLabel_IMGA</defaultValue>
    <label>Acceptance Field Label (IMGA)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>