force-app/main/default/objects/FlowScreenSettings__c/fields/AcceptanceFooter_CARA__c.field-meta.xml
<CustomField>
    <fullName>AcceptanceFooter_CARA__c</fullName>
    <defaultValue>$Label.AcceptanceFooter_CARA</defaultValue>
    <label>Acceptance Footer (CARA)</label>
    <type>TextArea</type>
</CustomField>