force-app/main/default/objects/FlowScreenSettings__c/fields/AcceptanceFooter_IMGA__c.field-meta.xml
<CustomField>
    <fullName>AcceptanceFooter_IMGA__c</fullName>
    <defaultValue>$Label.AcceptanceFooter_IMGA</defaultValue>
    <label>Acceptance Footer (IMGA)</label>
    <type>TextArea</type>
</CustomField>