force-app/main/default/objects/FlowScreenSettings__c/fields/AcceptanceHeader_IMGA__c.field-meta.xml
<CustomField>
    <fullName>AcceptanceHeader_IMGA__c</fullName>
    <defaultValue>$Label.AcceptanceHeader_IMGA</defaultValue>
    <label>Acceptance Header (IMGA)</label>
    <type>TextArea</type>
</CustomField>