force-app/main/default/objects/FlowScreenSettings__c/fields/CAP_Feedback_7_CARA__c.field-meta.xml
<CustomField>
    <fullName>CAP_Feedback_7_CARA__c</fullName>
    <defaultValue>$Label.FeedbackNoteCARA</defaultValue>
    <label>CAP Feedback 7 (CARA)</label>
    <type>TextArea</type>
</CustomField>