force-app/main/default/objects/FlowScreenSettings__c/fields/RejectFooter_IMGA__c.field-meta.xml
<CustomField>
    <fullName>RejectFooter_IMGA__c</fullName>
    <defaultValue>$Label.RejectFooter_IMGA</defaultValue>
    <label>Reject Footer (IMGA)</label>
    <type>TextArea</type>
</CustomField>