force-app/main/default/objects/FlowScreenSettings__c/fields/RejectHeader_CARA__c.field-meta.xml
<CustomField>
    <fullName>RejectHeader_CARA__c</fullName>
    <defaultValue>$Label.RejectHeader_CARA</defaultValue>
    <label>Reject Header (CARA)</label>
    <type>TextArea</type>
</CustomField>