force-app/main/default/objects/FlowScreenSettings__c/fields/RejectHeader_IMGA__c.field-meta.xml
<CustomField>
    <fullName>RejectHeader_IMGA__c</fullName>
    <defaultValue>$Label.RejectHeader_IMGA</defaultValue>
    <label>Reject Header (IMGA)</label>
    <type>TextArea</type>
</CustomField>